--- a/forrás/style.css
+++ b/forrás/style.css
@@ -17,7 +17,7 @@ main h2{
     color:  #416618;
     margin-top: 1rem;
     padding-left: 1rem;
-    text-transform: uppercase;
+    font-variant: small-caps;
 }
 
 #kajak4 li{
